--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,8 +3,6 @@ description: "Focus TimeCapsule"
 publish_to: 'none'
 version: 0.1.0
 
-google_fonts: ^6.1.0
-
 environment:
   sdk: ^3.7.2
 
@@ -13,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_inner_shadow: ^0.0.1
   animated_toggle: ^0.1.3
+  google_fonts: 5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -23,5 +22,4 @@ flutter:
   uses-material-design: true
   assets:
     - lib/assets/
-
-
+    - lib/assets/icons/
